# gitfetch

./: Cargo.toml  README.md  contribs.json  default.nix  flake.nix  result  shell.nix
src/: main.rs
