[package]
name = "gitfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = { version = "0.44.1"}
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0.140"
serde = "1.0.219"
viuer = { version = "0.9.2", features = [ "print-file"] }
image = "0.25.6"
reqwest = "0.12.22"
clap = { version = "4.5.40", features = ["derive"] }

